recover gateway serve and mvn clean compile